# ProjectChess

./: Cargo.toml
.github/workflows/: rust.yml
src/: game_render_util.rs  main.rs
src/gameui/: mod.rs  reneder_hepler.rs
src/parsers/: abstract_move_parser.rs  mod.rs  parse_helper.rs  physical_move_parser.rs
src/uci_conversions/: mod.rs
