[package]
name = "att_1_boxed"
version = "0.1.0"
authors = ["theRippedPug <tejasshastryumesh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez= "0.5.1"
crossbeam = "0.7"
chess = { git = "https://github.com/jordanbray/chess"}
lazy_static = ""